mouse cursor tracking on canvas using console log

--- a/style.css
+++ b/style.css
@@ -15,4 +15,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  /* set pointer-events to none on overlay image to make sure it doesn't interfere with mouse events on canvas */
+  pointer-events: none;
 }
